tests/sksl/errors/ReservedNameAttribute.glsl
### Compilation failed:

error: 1: name 'attribute' is reserved
int attribute;
    ^^^^^^^^^
1 error
